hq/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surveysolutions
spec:
  selector:
    matchLabels:
      app: surveysolutions
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: surveysolutions
        tier: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: surveysolutions
        image: ghcr.io/surveysolutions/surveysolutions/headquarters:29541
        resources:
          requests:
            cpu: 600m
            memory: 800Mi        
        ports:
        - containerPort: 80
