hq/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surveysolutions
  labels:
    app: surveysolutions
    tier: frontend
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  ports:
  - port: 80
  selector:
    app: surveysolutions
    tier: frontend
