hq/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: surveysolutions
  namespace: default
spec:
  rules:
  - host: demo-hq.alfeg.net
    http:
      paths:
      - backend:
          serviceName: surveysolutions
          servicePort: 80
        pathType: ImplementationSpecific
